<resources>
    <string name="app_name">MyFlower</string>
    <string name="flowers">Flowers</string>
    <string name="plants">Plants</string>
    <string name="my_flower">My Flower</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ciceginizin_ismi">çiçeğinizin ismi</string>
    <string name="aldiginiz_tarih">aldığınız tarih</string>
    <string name="ciceginizin_turu">çiçeğinizin türünü seçiniz</string>
    <string name="add">Add</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="add_reminder">Add your remainder...</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="main_about">Çiçek bakımı için hazırladığımız bu programda bütün bilgiler Anadolu Üniversitesi kütüphanesinden alınmıştır</string>
    <string name="about_seyfi">Uygulama Seyfettin ERCAN tarafından yazılmıştır. Bir tez çalışması olmakla beraber bitki haricinde hayvan ya da hatırlamayı unuttuğumuz birçok şey için kullanılabilir. İletişim bilgileri için kaydırınız</string>


</resources>
