
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="16dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar1"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/add_reminder_layout_top"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_height="148dp">

        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:gravity="top|left"
            android:hint="@string/add_reminder"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textColorHint="@color/primary_text_disabled_material_dark"
            android:textSize="25dp" />

    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_below="@id/add_reminder_layout_top"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textSize="15dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setDate"
                android:id="@+id/date"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@mipmap/ic_access_time_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/date_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setTime"
                android:id="@+id/time"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@mipmap/ic_access_time_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/time_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/set_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/repeat"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@mipmap/ic_sync_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/repeat_ll"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/set_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp" />

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="8dp"
                    android:onClick="onSwitchRepeat"
                    android:checked="true"
                    android:textOn="On"
                    android:textOff="Off"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatNo"
                android:clickable="true"
                android:onClick="setRepeatNo"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@mipmap/ic_unfold_more_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_no_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/set_repeat_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatType"
                android:clickable="true"
                android:onClick="selectRepeatType"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@mipmap/ic_subject_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_type_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/set_repeat_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/add_reminder_layout_top"
        android:background="@drawable/toolbar_dropshadow" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab1"
        fab:fab_icon="@drawable/ic_notification_off_white"
        android:background="#da3c2f"
        app:fab_size="normal"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="168dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"/>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab2"
        fab:fab_icon="@mipmap/ic_notifications_on_white_24dp"
        android:background="#da3c2f"
        app:fab_size="normal"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="168dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"/>

</RelativeLayout>
